infrastructure/bee/configs/base/gateways.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: metal-gateway
  namespace: gateways
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.40.11
  - type: IPAddress
    value: 192.168.40.12
  listeners:
  - name: imnotaserver.xyz-http
    hostname: "*.imnotaserver.xyz"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: imnotaserver.xyz-https
    hostname: "*.imnotaserver.xyz"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: imnotaserver.xyz-tls
